<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/card_heigth"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/movie"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_margin="@dimen/card_margin"
    app:elevation="@dimen/card_elevation"
    android:foreground="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/card_image_heigth"
            android:scaleType="fitXY"
            android:transitionName="@string/poster_image_transition_name"
            app:layout_constraintBottom_toTopOf="@+id/movieName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/activity_image_trans" />


        <TextView
            android:id="@+id/movieName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_title_height"
            android:layout_marginBottom="@dimen/one"
            android:textSize="@dimen/card_title_text_size"
            android:layout_weight="5"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterImage"
            tool:text="@string/movieName" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>