<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".moviedescription.MovieDetailsFragment">

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/card_image_heigth"
            android:layout_weight="4"
            android:transitionName="@string/poster_image_transition_name"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/movieVoteAverage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/posterImage"
            tools:text="@string/overview" />

        <TextView
            android:id="@+id/movieVoteAverage"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/budget"
            app:layout_constraintEnd_toStartOf="@id/release_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overview"
            tools:text="@string/vote_average" />

        <TextView
            android:id="@+id/release_date"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/budget"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/movieVoteAverage"
            app:layout_constraintTop_toBottomOf="@id/overview"
            tools:text="@string/release_date" />

        <TextView
            android:id="@+id/budget"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_margin="6dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_date"
            tools:text="@string/budget" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/trailer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/budget" />

        <TextView
            android:id="@+id/trailer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/zero"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/trailers"
            android:textColor="@android:color/holo_green_light"
            app:layout_constraintBottom_toTopOf="@id/divider2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@id/trailers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/trailer" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trailers"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_margin="6dp"
            android:layout_weight="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            />

        <TextView
            android:id="@+id/emptyTrailers"
            android:layout_width="@dimen/zero"
            android:layout_height="@dimen/zero"
            android:layout_margin="6dp"
            android:layout_weight="3"
            android:text="@string/empty_trailer"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider2"
            />

        <ProgressBar
            android:id="@+id/loadingDetails"
            android:layout_width="@dimen/loading_size"
            android:layout_height="@dimen/loading_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>